src/snapshots/netflow_parser__tests__base_tests__it_creates_error.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- Error:
    error:
      UnknownVersion:
        - 12
        - 13
        - 14
    remaining:
      - 12
      - 13
      - 14

