src/snapshots/netflow_parser__tests__base_tests__it_parses_0_length_fields_ipfix.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- IPFix:
    header:
      version: 10
      length: 48
      export_time: 16909060
      sequence_number: 0
      observation_domain_id: 16909060
    flowsets:
      - header:
          header_id: 2
          length: 20
        body:
          Template:
            - template_id: 256
              field_count: 3
              fields:
                - field_type_number: 8
                  field_type: SourceIpv4address
                  field_length: 4
                - field_type_number: 12
                  field_type: DestinationIpv4address
                  field_length: 4
                - field_type_number: 65
                  field_type: AssignedforNetFlowv9compatibility
                  field_length: 0
      - header:
          header_id: 256
          length: 12
        body:
          Data:
            - fields:
                - 0:
                    - SourceIpv4address
                    - Ip4Addr: 1.2.3.4
                - 1:
                    - DestinationIpv4address
                    - Ip4Addr: 1.2.3.4
                - 2:
                    - AssignedforNetFlowv9compatibility
                    - Vec: []
