src/snapshots/netflow_parser__tests__base_tests__it_parses_ipfix_data_cached_template.snap
---
source: src/tests.rs
expression: parser.parse_bytes(&packet)
---
- IPFix:
    header:
      version: 10
      length: 26
      export_time: 1
      sequence_number: 1
      observation_domain_id: 0
    flowsets:
      - header:
          header_id: 258
          length: 10
        body:
          Data:
            - fields:
                - 0:
                    - PacketDeltaCount
                    - DataNumber: 8
                - 1:
                    - SourceIpv4address
                    - Ip4Addr: 0.0.1.1
