src/snapshots/netflow_parser__tests__base_tests__it_parses_ipfix_enterprise_bit_in_non_options_template.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- IPFix:
    header:
      version: 10
      length: 42
      export_time: 1670052913
      sequence_number: 0
      observation_domain_id: 0
    flowsets:
      - header:
          header_id: 2
          length: 26
        body:
          templates:
            template_id: 260
            field_count: 2
            fields:
              - field_type_number: 103
                field_type: Enterprise
                field_length: 65535
                enterprise_number: 407732327
              - field_type_number: 32767
                field_type: Enterprise
                field_length: 0
                enterprise_number: 407732544
