src/snapshots/netflow_parser__tests__base_tests__it_parses_ipfix_options_template_with_data.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- IPFix:
    header:
      version: 10
      length: 64
      export_time: 0
      sequence_number: 1
      observation_domain_id: 2
    flowsets:
      - header:
          header_id: 3
          length: 28
        body:
          options_template:
            template_id: 260
            field_count: 3
            scope_field_count: 1
            fields:
              - field_type_number: 123
                field_type: Enterprise
                field_length: 4
                enterprise_number: 2
              - field_type_number: 41
                field_type: ExportedMessageTotalCount
                field_length: 2
              - field_type_number: 42
                field_type: ExportedFlowRecordTotalCount
                field_length: 2
      - header:
          header_id: 260
          length: 20
        body:
          options_data:
            data_fields:
              - 0:
                  - Enterprise
                  - DataNumber: 1
              - 1:
                  - ExportedMessageTotalCount
                  - DataNumber: 276
              - 2:
                  - ExportedFlowRecordTotalCount
                  - DataNumber: 5140
              - 0:
                  - Enterprise
                  - DataNumber: 2
              - 1:
                  - ExportedMessageTotalCount
                  - DataNumber: 5140
              - 2:
                  - ExportedFlowRecordTotalCount
                  - DataNumber: 7710
