src/snapshots/netflow_parser__tests__base_tests__it_parses_ipfix_with_v9_options_template_packet.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- IPFix:
    header:
      version: 10
      length: 115
      export_time: 1744871721
      sequence_number: 100000
      observation_domain_id: 0
    flowsets:
      - header:
          header_id: 1
          length: 14
        body:
          V9OptionsTemplate:
            template_id: 1256
            options_scope_length: 1
            options_length: 6
            scope_fields: []
            option_fields:
              - field_type_number: 34
                field_type: SamplingInterval
                field_length: 4
      - header:
          header_id: 1256
          length: 8
        body:
          V9OptionsData:
            fields:
              - scope_fields: []
                options_fields:
                  - - - SamplingInterval
                      - DataNumber: 1
      - header:
          header_id: 2
          length: 44
        body:
          Template:
            template_id: 258
            field_count: 9
            fields:
              - field_type_number: 8
                field_length: 4
                field_type:
                  IANA: SourceIpv4address
              - field_type_number: 12
                field_length: 4
                field_type:
                  IANA: DestinationIpv4address
              - field_type_number: 7
                field_length: 2
                field_type:
                  IANA: SourceTransportPort
              - field_type_number: 11
                field_length: 2
                field_type:
                  IANA: DestinationTransportPort
              - field_type_number: 4
                field_length: 1
                field_type:
                  IANA: ProtocolIdentifier
              - field_type_number: 2
                field_length: 4
                field_type:
                  IANA: PacketDeltaCount
              - field_type_number: 1
                field_length: 4
                field_type:
                  IANA: OctetDeltaCount
              - field_type_number: 22
                field_length: 4
                field_type:
                  IANA: FlowStartSysUpTime
              - field_type_number: 21
                field_length: 4
                field_type:
                  IANA: FlowEndSysUpTime
      - header:
          header_id: 258
          length: 33
        body:
          Data:
            fields:
              - - - IANA: SourceIpv4address
                  - Ip4Addr: 70.70.1.1
                - - IANA: DestinationIpv4address
                  - Ip4Addr: 120.120.1.1
                - - IANA: SourceTransportPort
                  - DataNumber: 12345
                - - IANA: DestinationTransportPort
                  - DataNumber: 32777
                - - IANA: ProtocolIdentifier
                  - ProtocolType: Tcp
                - - IANA: PacketDeltaCount
                  - DataNumber: 100
                - - IANA: OctetDeltaCount
                  - DataNumber: 125000000
                - - IANA: FlowStartSysUpTime
                  - DataNumber: 1744871721
                - - IANA: FlowEndSysUpTime
                  - DataNumber: 1744871721
